# cr-manager

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pylintrc  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT  LICENSE  README.PYPI.md  README.md  cr_manager.py  crm.py  init.sh  main.py  pyproject.toml  run.sh  sample.c  sample.groovy  sample.py
.github/workflows/: build.yml  deploy.yml  publish.yml  release.yml  semantic-release.yml
cli/: crm.py  install_completion.py
cli/completions/: cr-manager.bash
cli/libs/: formats.toml  helper.py  manager.py
libs/: helper.py  manager.py
src/: crm.py
src/cr_manager/: main_cli.py
src/cr_manager/libs/: helper.py  manager.py
tests/: COPYRIGHT  sample.c  sample.groovy  sample.py  sample.sh  sample.txt
tests/archive/: sample.c
