# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cr-manager"
version = "2.0.1"
description = "Tool to automatically add, update, or delete multi-format copyright headers"

[project.scripts]
cr-manager = "cli.crm:main"

[tool.setuptools.packages.find]
