# pyproject.toml

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cr-manager"
version = "2.0.7"
description = "Tool to automatically add, update, or delete multi-format copyright headers"
authors = ["marslo <marslo.jiao@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "cli" }
]

[tool.poetry.scripts]
cr-manager = "cli.crm:main"

[tool.poetry.dependencies]
python = "^3.8"
wcwidth = "^0.2.13"

[tool.poetry.group.dev.dependencies]
