# pyproject.toml

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cr-manager"
version = "3.0.1"
description = "Tool to automatically add, update, or delete multi-format copyright headers"
authors = ["marslo <marslo.jiao@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "cli" }
]

[tool.poetry.scripts]
cr-manager = "cli.crm:main"

[tool.poetry.dependencies]
python = ">=3.10"
wcwidth = "^0.2.13"

[tool.poetry.group.dev.dependencies]
pylint = "^4.0.2"
